Enhanced Core update
Split off common things into Enhanced Core

--- a/src/main/resources/assets/tts/lang/en_US.lang
+++ b/src/main/resources/assets/tts/lang/en_US.lang
@@ -8,3 +8,4 @@ item.tube.direction.2=NORTH
 item.tube.direction.3=SOUTH
 item.tube.direction.4=EAST
 item.tube.direction.5=WEST
+tts.chat.updateMessage=There is an update available for Tube Transport System (%1$s)
